[tool.poetry]
name = "kitti3"
version = "0.5.1"
description = "Kitti3 - i3/sway floating window handler"
authors = ["Ariel Ladegaard <arl13@aber.ac.uk>"]
license = "BSD 3-Clause"
repository = "https://github.com/LandingEllipse/kitti3"
keywords = ["floating", "terminal", "kitty", "i3", "sway"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Operating System :: POSIX :: Linux",
  "Environment :: X11 Applications",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Terminals :: Terminal Emulators/X Terminals",
  "Topic :: Desktop Environment :: Window Managers",
]

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = { version = "^3.7.3", python = "<3.8" } # fallback backport for Python 3.6/3.7
i3ipc = ">=2.0.0"

[tool.poetry.dev-dependencies]
# pytest = ">=3.5"
black = "^20.8b1"
isort = "^5.8.0"
pylint = "^2.10.2"

[tool.poetry.scripts]
kitti3 = "kitti3.cli:cli"


[tool.black]
line-length = 88
target-version = ['py36']
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | build
    | dist
  )/
)
'''
experimental-string-processing = true

[tool.isort] # black compatibility
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88
